# esp_work

./: .gitignore
Edge/BLE/: CMakeLists.txt
Edge/WiFi/main/: AP.c  CMakeLists.txt
Host/BL/: CMakeLists.txt
Host/BL/include/: BL.h
Host/BL/src/: BL.c  main.c
proj/: CMakeLists.txt
proj/main/: ap.c
